# rust

./: Cargo.toml  README.md  rustfmt.toml  ub list.txt
crate/: Cargo.toml
crate/src/: array.rs  ast.rs  boolean.rs  containers.rs  env.rs  environment.rs  error.rs  features.rs  function.rs  knightstr.rs  knstr.rs  lib.rs  list.rs  main.rs  null.rs  number.rs  parser.rs  stream.rs  text.rs  value.rs  value2.rs  variable.rs
crate/src/env/: builder.rs
crate/src/environment/: builder.rs  variable.rs
crate/src/error/: mod.rs  normal.rs  reckless.rs
crate/src/knstr/: builder.rs  knstr.rs  mod.rs  sharedstr.rs
crate/src/text/: builder.rs  cow.rs  mod.rs  ref.rs  sharedtext.rs  static.rs  text.rs
crate/src/value/: boolean.rs  integer.rs  list.rs  mod.rs  null.rs  text2.rs  value.rs
crate/src/value/text/: builder.rs  mod.rs  sharedtext.rs  text.rs  textslice.rs
crate2/: Cargo.toml
crate2/src/: boolean.rs  environment.rs  error.rs  lib.rs  main.rs  null.rs  number.rs  text.rs  value.rs
crate2/src/environment/: builder.rs
crate2/src/text/: builder.rs  cache.rs  text_static.rs
crate3/: Cargo.toml
crate3/src/: ast.rs  boolean.rs  env.rs  environment.rs  error.rs  functions.rs  lib.rs  main.rs  null.rs  number.rs  text.rs  value.rs
crate3/src/env/: variable.rs
crate3/src/environment/: builder.rs  variable.rs
crate3/src/text/: builder.rs  mod.rs  ref.rs  static.rs  text.rs
cright/: Cargo.toml
cright/src/: ast.rs  env.rs  func.rs  lib.rs  main.rs  parse.rs  shared.rs  text.rs  value.rs
discord-bot/: Cargo.toml
discord-bot/src/: main.rs
knight/: Cargo.toml
knight/src/: ast.rs  boolean.rs  custom.rs  env.rs  error.rs  function.rs  lib.rs  main.rs  null.rs  number.rs  ops.rs  parse.rs  text.rs  value.rs  variable.rs
knight/src/parse/: error.rs  functions.rs  stream.rs  tokenize.rs
knight/src/types/: ast.rs  boolean.rs  custom.rs  mod.rs  null.rs  number.rs  text.rs  variable.rs
knight/src/types/ast/: builder.rs
knight/src/types/text/: builder.rs  inner.rs  owned.rs  ref.rs  static.rs
knightrs/: Cargo.toml
knightrs-bytecode/: Cargo.toml
knightrs-bytecode/src/: cli.rs  container.rs  env.rs  error.rs  gc.rs  lib.rs  main.rs  options.rs  program.rs  value.rs  value2.rs
knightrs-bytecode/src/parse/: error.rs  mod.rs  span.rs  stream.rs  token.rs  tokenizer.rs
knightrs-bytecode/src/parser/: ast.rs  error.rs  mod.rs  parser.rs  source_location.rs  variable_name.rs
knightrs-bytecode/src/parser/parser/: ast.rs  function.rs  parens.rs  variable.rs
knightrs-bytecode/src/parser2/: mod.rs  origin.rs  parser.rs  span.rs  stream.rs
knightrs-bytecode/src/program/: compiler.rs
knightrs-bytecode/src/strings/: character.rs  encoding.rs  knstr.rs  knstrref.rs  mod.rs  slice.rs
knightrs-bytecode/src/value/: block.rs  boolean.rs  integer.rs  knstring.rs  list.rs  null.rs  string.rs
knightrs-bytecode/src/value2/: boolean.rs  integer.rs  knstring.rs  list.rs  null.rs
knightrs-bytecode/src/vm/: callsite.rs  error.rs  mod.rs  opcode.rs  stacktrace.rs  vm.rs
knightrs-wasm/: Cargo.toml  build.sh
knightrs-wasm/pkg/: index.html
knightrs-wasm/src/: lib.rs
knightrs/src/: ast.rs  env.rs  error.rs  function.rs  lib.rs  main.rs  parse.rs
knightrs/src/env/: builder.rs  flags.rs  output.rs  prompt.rs  variable.rs
knightrs/src/function/: fork.rs
knightrs/src/parse/: blank.rs  grouped_expression.rs  list_literal.rs
knightrs/src/value/: boolean.rs  custom.rs  integer.rs  list.rs  mod.rs  null.rs  value.rs
knightrs/src/value/integer/: inttype.rs
knightrs/src/value/text/: builder.rs  character.rs  encoding.rs  mod.rs  text.rs  textslice.rs
knights-bytecode/: Cargo.toml
knights-bytecode/src/: encoding.rs  env.rs  error.rs  lib.rs  main.rs  options.rs  parser-old.rs  program.rs  string.rs  stringslice.rs  value.rs
knights-bytecode/src/encoding-old/: knight.rs  mod.rs  utf8.rs
knights-bytecode/src/old_vm_and_parser_and_program/: mod.rs  parser.rs
knights-bytecode/src/old_vm_and_parser_and_program/parser/: function.rs  variable.rs
knights-bytecode/src/parser/: ast.rs  mod.rs  parsable.rs  parser.rs  source.rs  variable_name.rs
knights-bytecode/src/parser/parser/: function.rs  variable.rs
knights-bytecode/src/program/: builder.rs
knights-bytecode/src/strings/: encoding.rs  mod.rs  slice.rs  string.rs  stringslice.rs
knights-bytecode/src/value/: block.rs  boolean.rs  integer.rs  list.rs  null.rs  string.rs
knights-bytecode/src/vm/: error.rs  mod.rs  opcode.rs  parser.rs  program.rs  vm.rs
knights-bytecode/src/vm/parser/: function.rs  variable.rs
src/: ast.rs  containers.rs  env.rs  environment.rs  error.rs  function.rs  lib.rs  main.rs  parse.rs  parser.rs  stream.rs  value.rs  variable.rs
src/env/: builder.rs  flags.rs  options.rs  output.rs  prompt.rs  variable.rs
src/environment/: builder.rs  variable.rs
src/function/: fork.rs
src/parse/: blank.rs  grouped_expression.rs  list_literal.rs
src/value/: boolean.rs  custom.rs  integer.rs  list.rs  mod.rs  null.rs  value.rs
src/value/integer/: int_type.rs  inttype.rs
src/value/text/: builder.rs  character.rs  encoding.rs  mod.rs  text.rs  textslice.rs
