[package]
name = "knightrs"
version = "0.9.9"
authors = ["Sam Westerman <mail@sampersand.me>"]
edition = "2021"
description = "The Knight programming language, in Rust"
repository = "https://github.com/knight-lang/rust"
license = "MIT"

# keywords = []
# categories = []

[features]
default = ["extensions", "compliance"]

multithreaded = [] # Enables multithreading support
extensions = [] # stuff that's not part of base knight
custom-types = ["extensions"] # Allows users to add custom types in

compliance = [] # Compiles in the ability to toggle compliance checks for most things.
check-container-length = [] # Ensure containers don't grow larger than i32::MAX
knight-encoding = [] # Restricts strings to only use the knight encoding.
small-integers = [] # Uses 32 bit integers instead of the default 64.
checked-math-ops = [] # checks each integer op for overflow.
strict-integer = ["small-integers", "checked-math-ops"] # Integers behave only with spec compliance

# Enables all compliance-related flags, _and_ defaults all interpreter compliance options to true.
strict-compliance = [
	"compliance",
	"knight-encoding",
	"strict-integer",
	"check-container-length",
]

[dependencies]
rand = "0.8"
once_cell = "1.7"
lazy_static = "1.4"
clap = { version = "2.33", optional = true }
static_assertions = "1.1"
cfg-if = "1.0"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "doc_cfg"]

[[bin]]
name = "knight"
path = "src/main.rs"
# required-features = ["clap"]

