[package]
name = "knightrs"
version = "0.9.9"
authors = ["Sam Westerman <mail@sampersand.me>"]
edition = "2021"
description = "The Knight programming language, in Rust"
repository = "https://github.com/knight-lang/rust"
license = "MIT"

# keywords = []
# categories = []

[features]
# default = ["extensions", "compliance"]
default = ["all-extensions", "strict-compliance"]

multithreaded = [] # Enables multithreading support
extensions = [] # stuff that's not part of base knight
custom-types = ["extensions"] # Allows users to add custom types in

# If this is enabled, ensures that all extensions default to true.
all-extensions = ["extensions", "multithreaded", "custom-types"]

compliance = [] # Compiles in the ability to toggle compliance checks for most things.
# Enables all compliance-related flags, _and_ defaults all interpreter compliance options to true.
strict-compliance = ["compliance"]

[dependencies]
rand = "0.8"
once_cell = "1.7"
lazy_static = "1.4"
clap = { version = "2.33", optional = true }
static_assertions = "1.1"
cfg-if = "1.0"
num-traits = "0.2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
# to test locally: RUSTDOCFLAGS="--cfg docsrs" cargo doc

[[bin]]
name = "knight"
path = "src/main.rs"
# required-features = ["clap"]

