[package]
name = "knightrs"
version = "0.8.12"
authors = ["Sam Westerman <mail@sampersand.me>"]
edition = "2021"
description = "The Knight programming language, in Rust"
repository = "https://github.com/knight-lang/rust"
license = "MIT"

# keywords = []
# categories = []

[features]
default = ["all-extensions"]

#######################################
##           Optimizations           ##
#######################################

# Leak strings for fast access later.
cache-strings = []

# Instead of propagating exceptions, abort when an error occurs.
abort-on-errors = []

# Enable all optimizations
optimized = ["abort-on-errors", "cache-strings"]

#######################################
##      Disabling Optimizations      ##
#######################################
multithreaded = []

#######################################
##        Disabling Extensions       ##
#######################################

extension-functions = [] # Required for all `X` functions.

# Enables the `VALUE` function
value-function = []

# Convert non-variables to strings for the first arg in `=`.
assign-to-anything = []

# Causes `GET` and `SET` to return empty strings on errors, not errors.
no-oob-errors = []

# Allows you to use negative indexes in `GET` and `SET` 
negative-indexing = []

# Enables `XSRAND`
srand-function = ["extension-functions"]

# Enable most extensions
normal-extensions = ["srand-function", "value-function", "assign-to-anything"]

# Enable all extensions
qol-extensions = ["no-oob-errors", "negative-indexing"]

all-extensions = ["normal-extensions", "qol-extensions"]

# arrays = []
# split-strings = ["arrays"]
# string-formatting = ["arrays"]

#######################################
##          Spec Compliance          ##
#######################################

forbid-trailing-tokens = []

# Restrict source files and strings to the bytes defined in the Knight spec.
strict-charset = [] # TODO: make this work

# Catch undefined integer arithmetic
checked-overflow = []

# Use `i32` for numbers, which is the minimum required range.
strict-numbers = []

# Ensure BLOCK return values are handled correctly.
strict-block-return-value = []

# Ensure that all variable names are valid (eg `VALUE 1` would fail.)
verify-variable-names = []

# Exactly follow knight specs.
strict-compliance = [
	"strict-numbers",
	"checked-overflow",
	"forbid-trailing-tokens",
	"strict-charset",
	"strict-block-return-value",
	"verify-variable-names"
]

[dependencies]
rand = "0.8"
once_cell = "1.7"
lazy_static = "1.4"
cfg-if = "1.0"
clap = { version = "2.33", optional = true }
tap = "1.0"
static_assertions = "1.1"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "doc_cfg"]

[[bin]]
name = "knight"
path = "src/main.rs"
# required-features = ["clap"]

