[package]
name = "knightrs"
version = "0.8.12"
authors = ["Sam Westerman <mail@sampersand.me>"]
edition = "2021"
description = "The Knight programming language, in Rust"
repository = "https://github.com/knight-lang/rust"
license = "MIT"

# keywords = []
# categories = []

[features]
default = ["all-extensions", "list-extensions", "string-extensions", "negative-ranges",
"assignment-overloads"]

#######################################
##      Disabling Optimizations      ##
#######################################
multithreaded = []

#######################################
##            Extensions             ##
#######################################

value-function = [] # Enables the `VALUE` function
eval-function = [] # Enables the `EVAL` function
assign-to-anything = [] # Convert non-variables to strings for the first arg in `=`.
handle-function = [] # Enables the use of `HANDLE a b`, which is try/catch; error msg is in `_`
use-function = [] # Enables the `USE` function, which is for importing files

# Spec-defined:
spec-extensions = [
	"value-function",
	"eval-function",
	"handle-function",
	"use-function",
	"assign-to-anything",
]

# Mine:
list-extensions = ["assign-to-lists"]
string-extensions = []
negative-ranges = []
assign-to-lists = []

extension-functions = [] # Required for all `X` functions.


# Enables `XSRAND`
xsrand-function = ["extension-functions"]

# Enables `XREV`
xreverse-function = ["extension-functions"]

# Enable most extensions
normal-extensions = [
	"value-function",
	"assign-to-anything",
	"handle-function",
	"use-function",
	"xsrand-function",
	"xreverse-function",
]

all-extensions = ["normal-extensions", "qol-extensions"]

#######################################
##     Quality-of-life extensions    ##
#######################################
# All quality of life extensions may be removed in the future without it
# being considered a breaking change; these are just for golfing convenience.

# Causes `GET` and `SET` to return empty strings on errors, not errors.
no-oob-errors = []

# Allows you to use negative indexes in `GET` and `SET` 
negative-indexing = []

# Let's you specify what the next `PROMPT` should return.
#
# If this is set along with `assign-to-anything`, this will take precedence;
# use `+""P` if you want to assign to `PROMPT`'s return value.
assign-to-prompt = []
assign-to-system = []

assignment-overloads = ["assign-to-prompt", "assign-to-system"]

# Enable all quality-of-life extensions
qol-extensions = ["no-oob-errors", "negative-indexing", "assign-to-prompt"]

# split-strings = ["arrays"]
# string-formatting = ["arrays"]

#######################################
##          Spec Compliance          ##
#######################################

forbid-trailing-tokens = []

# Restrict source files and strings to the bytes defined in the Knight spec.
strict-charset = [] # TODO: make this work

# Catch undefined integer arithmetic
checked-overflow = []

# Use `i32` for numbers, which is the minimum required range.
strict-numbers = []

# Ensure BLOCK return values are handled correctly.
strict-block-return-value = []

# Ensure that all variable names are valid (eg `VALUE 1` would fail.)
verify-variable-names = []

# Exactly follow knight specs.
strict-compliance = [
	"strict-numbers",
	"checked-overflow",
	"forbid-trailing-tokens",
	"strict-charset",
	"strict-block-return-value",
	"verify-variable-names"
]

[dependencies]
rand = "0.8"
once_cell = "1.7"
lazy_static = "1.4"
cfg-if = "1.0"
clap = { version = "2.33", optional = true }
tap = "1.0"
static_assertions = "1.1"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "doc_cfg"]

[[bin]]
name = "knight"
path = "src/main.rs"
# required-features = ["clap"]

