[package]
name = "knight-lang"
version = "0.1.0"
authors = ["Sam Westerman <mail@sampersand.me>"]
edition = "2018"

[features]
default = ["unicode", "checked-overflow"]
unicode = []
checked-overflow = []
assign-to-anything = []
negative-indexing = []

[dependencies]
static_assertions = "*"
rand = "0.8"
cfg-if = "*"