[package]
name = "cright"
version = "0.1.0"
authors = ["Sam Westerman <mail@sampersand.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cache-asts"]

cache-asts = []

[dependencies]
byte-strings = "0.1.3"
syn = { version = "*", features = ["full"] }
