[package]
name = "discord-bot"
version = "0.1.0"
authors = ["Sam Westerman <mail@sampersand.me>"]
edition = "2018"

[dependencies]
knightrs = { version = "0.8.10", path = "../crate", features=["strict-compliance"] }
tokio = { version = "1.0", features = ["macros", "sync", "rt-multi-thread"] }
serenity = { version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
