[package]
name = "knightrs-bytecode"
version = "0.1.0"
edition = "2021"
default-run = "knightrs-bytecode"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0"
safe-transmute = "0.11"
thiserror = "2.0"
static_assertions = "1.1"
indexmap = "2.7"
rand = "0.8"
likely_stable = "0.1.2"
crossbeam-epoch = "0.9"

[features]
default = ["extensions", "compliance", "qol", "embedded", "knight_2_0_1"] # the defaults just when testing

multithreaded = [] # TODO: add multithreading

stacktrace      = [] # Print out stacktraces
check-variables = [] # Compile in checks to see if variables are null or not.
check-parens    = [] # Compile in checks for parens
qol = ["stacktrace", "check-variables", "check-parens"]

extensions = []  # Compile in _all_ extensions
compliance = ["check-variables", "check-parens"]  # Compile in _all_ forms of compliance checking

custom-types = ["extensions"]

embedded = []
floats = []

# If enabled, support knight-2.0.1 features
knight_2_0_1 = []

all-extensions = ["extensions", "custom-types"]
strict-compliance = ["compliance"]

unstable-doc-cfg = ["extensions", "compliance", "qol", "embedded"]
