[package]
name = "knightrs-bytecode"
version = "0.1.0"
edition = "2021"
default-run = "knightrs-bytecode"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0"
safe-transmute = "0.11"
thiserror = "2.0"
static_assertions = "1.1"
indexmap = "2.7"
rand = "0.8"
likely_stable = "0.1.2"
crossbeam-epoch = "0.9"
clap = { version = "4.5.39", features = ["derive", "cargo"], optional = true }

[features]
default = ["extensions", "compliance", "debugger", "embedded", "clap"] # the defaults just when testing
unstable-doc-cfg = ["extensions", "compliance", "debugger", "embedded"]

# Normal options
debugger        = ["stacktrace", "check-variables", "check-parens"]
extensions = [] # Support for extensions; Without this, extensions can't be used.
compliance = ["check-variables", "check-parens"] # Support for compliance checking; Without it, compliance checking cant be
embedded   = []

# Subsections of enabled-by-default options
stacktrace      = [] # Print out stacktraces
check-variables = [] # Compile in checks to see if variables are null or not.
check-parens    = [] # Compile in checks for parens

# Add support for older the Knight version
knight_2_0_1 = []

# TODO options
custom-types = ["extensions"] # TODO: support custom types
multithreaded = [] # TODO: add multithreading
