[package]
name = "knights-bytecode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0"
safe-transmute = "0.11"
thiserror = "2.0"


[features]
multithreaded = []
extensions = []
compliance = []
custom-types = ["extensions"]

all-extensions = ["extensions", "custom-types"]
iffy-extensions = ["extensions"]
all-iffy-extensions = ["all-extensions", "iffy-extensions"]
strict-compliance = ["compliance"]

default = ["custom-types", "compliance"]
