[package]
name = "knights-bytecode"
version = "0.1.0"
edition = "2021"
default-run = "knights-bytecode"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0"
safe-transmute = "0.11"
thiserror = "2.0"


[features]
multithreaded = []
extensions = []
compliance = []
custom-types = ["extensions"]
knight-debugging = []
stacktrace = [] # TODO: remove knight-debugging

all-extensions = ["extensions", "custom-types"]
iffy-extensions = ["extensions"]
all-iffy-extensions = ["all-extensions", "iffy-extensions"]
strict-compliance = ["compliance"]

default = ["extensions", "compliance", "knight-debugging", "stacktrace"] # knight-debugging should be default
